Adding about.html to the nav bar in all pages. Work on CSS of the contact.html page.

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -26,55 +27,55 @@
     <!-- Main Content (Grid Layout) -->
     <main>
 
-        <section class="bg-1">
-        <h1>Get In Touch</h1>
-        <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Please feel free to reach out via your preferred method below.</p>
-    </section>
+        <!--Hero-->
+        <section class="hero">
+            <h1>Get In Touch</h1>
+            <p>I'm always eager to connect with fellow professionals, discuss new challenges, and explore opportunities. Please feel free to reach out via your preferred method below.</p>
+        </section>
 
-    <section class="bg-2">
-        <h2>Ways to Connect</h2>
-        <p>For direct inquiries, networking, or to view my projects, here are the best ways to reach me:</p>
-        <ul>
-            <li>
-                <a href="mailto:your-email@example.com" class="button-cta">Email Me Directly</a>
-                <p><strong>Best for:</strong> Professional inquiries, collaboration proposals, or specific questions about my experience.</p>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/your-linkedin-profile/" target="_blank" rel="noopener noreferrer" class="button-cta">Connect on LinkedIn</a>
-                <p><strong>Best for:</strong> Professional networking, direct messages regarding job opportunities, or industry discussions.</p>
-            </li>
-            <li>
-                <a href="https://github.com/your-github-profile" target="_blank" rel="noopener noreferrer" class="button-cta">Explore My GitHub</a>
-                <p><strong>Best for:</strong> Reviewing my code repositories, project write-ups, and cybersecurity lab documentation.</p>
-            </li>
-        </ul>
-        <p class="response-note">I strive to respond to all professional inquiries within 24-48 business hours.</p>
-        <p>Please remember to replace <code>your-linkedin-profile</code>, <code>your-github-profile</code>, and <code>your-email@example.com</code> with your actual links!</p>
-    </section>
-    
-        <!--Old-->
-        <section class="bg-1">
-            <h1>Contact</h1>
-        </section>
-        <section class="bg-2">
+        <!--Job Opportunities-->
+        <section class="job">
             <h2>For Job Opportunities:</h2>
-            <p><strong>Email:</strong><a href="mailto:gexterlife.personal@gmail.com">gexterlife.personal@gmail.com</a></p>
-            <p><strong>Phone (US):</strong> +1 (303) 834-7944 <br><em>For serious job inquiries only</em></p>
-            <p><strong>LinkedIn (Preferred):</strong><br>
-            <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">linkedin.com/in/sangsongthong-chantaranothai</a></p>
-            <p><strong>GitHub:</strong><br>
-            <a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a>
-        </section>
-        <section class="bg-1">
-            <h2>For Freelance Services:</h2>
+            <p>For direct inquiries, networking, or to view my projects, here are the best ways to reach me:</p>
             <ul>
-                <li><strong>General:</strong> <a href="mailto:hexterika.contact@hexterika-breaks-free.website">hexterika.contact@hexterika-breaks-free.website</a></li>
-                <li><strong>Cybersecurity:</strong> <a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website">hexterika.cyberlab@hexterika-breaks-free.website</a></li>
-                <li><strong>Design:</strong> <a href="mailto:hexterika.designer@hexterika-breaks-free.website">hexterika.designer@hexterika-breaks-free.website</a></li>
+                <li>
+                    <a href="mailto:gexterlife.personal@gmail.com" class="button-cta">Email Me Directly</a>
+                    <p><strong>Best for:</strong> Professional inquiries, collaboration proposals, or specific questions about my experience.</p>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer" class="button-cta">Connect on LinkedIn</a>
+                    <p><strong>Best for:</strong> Professional networking, direct messages regarding job opportunities, or industry discussions.</p>
+                </li>
+                <li>
+                    <a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer" class="button-cta">Explore My GitHub</a>
+                    <p><strong>Best for:</strong> Reviewing my code repositories, project write-ups, and cybersecurity lab documentation.</p>
+                </li>
             </ul>
         </section>
-        <section>
-            <p><em>Other channels available after first contact.</em></p>
+
+        <!--Freelance Services-->
+        <section class="freelance">
+            <h2>For Freelance Services:</h2>
+            <ul>
+                <li>
+                    <a href="mailto:hexterika.contact@hexterika-breaks-free.website" class="button-cta">General Freelancing Services</a>
+                    <p><strong>Best for:</strong> General freelance inquiries, project quotes, or initial contact for service discussions.</p>
+                </li>
+                <li>
+                    <a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website" class="button-cta">IT & Cybersecurity Service</a>
+                    <p><strong>Best for:</strong> Inquiries related to cybersecurity projects, consultations, vulnerability assessments, or penetration testing.</p>
+                </li>
+                <li>
+                    <a href="mailto:hexterika.designer@hexterika-breaks-free.website" class="button-cta">UX/UI Design Service</a>
+                    <p><strong>Best for:</strong> Design-specific project requests, UI/UX consultations, or graphic design work.</p>
+                </li>
+            </ul>
+
+        </section>
+        
+        <!--Closing End-->
+        <section class="closing-end">
+            <p class="response-note">I strive to respond to all professional inquiries within 24-48 business hours.</p>
         </section>
     </main>
 
