--- a/skills.html
+++ b/skills.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -26,111 +27,111 @@
     <!-- Main Content (Grid Layout) -->
     <main>
         <section class="bg-1">
-        <h1>My Comprehensive Skill Set</h1>
-        <p>This page provides a detailed overview of my technical, professional, and complementary skills, showcasing the full breadth of my capabilities as an IT professional transitioning into cybersecurity, driven by the Hexterika philosophy of continuous learning and versatile application.</p>
-    </section>
+            <h1>My Comprehensive Skill Set</h1>
+            <p>This page provides a detailed overview of my technical, professional, and complementary skills, showcasing the full breadth of my capabilities as an IT professional transitioning into cybersecurity, driven by the Hexterika philosophy of continuous learning and versatile application.</p>
+        </section>
 
-    <section class="bg-2">
-        <h2>Technical & Cybersecurity Skills</h2>
-        <p>My hands-on experience and dedicated study have equipped me with proficiency in a wide array of technical domains.</p>
+        <section class="bg-2">
+            <h2>Technical & Cybersecurity Skills</h2>
+            <p>My hands-on experience and dedicated study have equipped me with proficiency in a wide array of technical domains.</p>
         
-        <div class="skills-category">
-            <h3>Cybersecurity Tools & Concepts</h3>
-            <ul>
-                <li><strong>Penetration Testing Tools:</strong> Kali Linux, Nmap, Burp Suite, Metasploit</li>
-                <li><strong>Vulnerability Assessment & Management:</strong> Identification, analysis, and reporting of security weaknesses.</li>
-                <li><strong>Network Reconnaissance:</strong> Footprinting, scanning, enumeration.</li>
-                <li><strong>Web Application Security:</strong> Familiarity with OWASP Top 10, SQL Injection, Cross-Site Scripting (XSS).</li>
-                <li><strong>Threat Detection & Analysis:</strong> Basic familiarity with Elastic SIEM and Splunk for understanding defensive operations and log analysis fundamentals.</li>
-                <li><strong>Social Engineering Awareness:</strong> Understanding of common attack vectors and mitigation strategies.</li>
-            </ul>
-        </div>
+            <section class="skills-category">
+                <h3>Cybersecurity Tools & Concepts</h3>
+                <ul>
+                    <li><strong>Penetration Testing Tools:</strong> Kali Linux, Nmap, Burp Suite, Metasploit</li>
+                    <li><strong>Vulnerability Assessment & Management:</strong> Identification, analysis, and reporting of security weaknesses.</li>
+                    <li><strong>Network Reconnaissance:</strong> Footprinting, scanning, enumeration.</li>
+                    <li><strong>Web Application Security:</strong> Familiarity with OWASP Top 10, SQL Injection, Cross-Site Scripting (XSS).</li>
+                    <li><strong>Threat Detection & Analysis:</strong> Basic familiarity with Elastic SIEM and Splunk for understanding defensive operations and log analysis fundamentals.</li>
+                    <li><strong>Social Engineering Awareness:</strong> Understanding of common attack vectors and mitigation strategies.</li>
+                </ul>
+            </section>
 
-        <div class="skills-category">
-            <h3>Operating Systems & Servers</h3>
-            <ul>
-                <li><strong>Client OS:</strong> Windows (7, 8, 10, 11), Various Linux Distributions (Ubuntu, Kali Linux)</li>
-                <li><strong>Server OS:</strong> Windows Server (including Active Directory concepts and basic administration)</li>
-                <li><strong>Linux Command Line:</strong> Proficient in Bash scripting and common Linux utilities.</li>
-            </ul>
-        </div>
+            <section class="skills-category">
+                <h3>Operating Systems & Servers</h3>
+                <ul>
+                    <li><strong>Client OS:</strong> Windows (7, 8, 10, 11), Various Linux Distributions (Ubuntu, Kali Linux)</li>
+                    <li><strong>Server OS:</strong> Windows Server (including Active Directory concepts and basic administration)</li>
+                    <li><strong>Linux Command Line:</strong> Proficient in Bash scripting and common Linux utilities.</li>
+                </ul>
+            </section>
 
-        <div class="skills-category">
-            <h3>Programming & Scripting</h3>
-            <ul>
-                <li><strong>Python:</strong> Scripting for automation, data parsing, and basic security tool usage.</li>
-                <li><strong>Bash:</strong> Command-line scripting for task automation and system administration in Linux environments.</li>
-                <li><strong>PowerShell:</strong> Scripting for Windows administration and task automation.</li>
-                <li><strong>HTML/CSS:</strong> Proficient in proofreading and refining AI-generated code for web content, ensuring accuracy and semantic correctness.</li>
-            </ul>
-        </div>
+            <section class="skills-category">
+                <h3>Programming & Scripting</h3>
+                <ul>
+                    <li><strong>Python:</strong> Scripting for automation, data parsing, and basic security tool usage.</li>
+                    <li><strong>Bash:</strong> Command-line scripting for task automation and system administration in Linux environments.</li>
+                    <li><strong>PowerShell:</strong> Scripting for Windows administration and task automation.</li>
+                    <li><strong>HTML/CSS:</strong> Proficient in proofreading and refining AI-generated code for web content, ensuring accuracy and semantic correctness.</li>
+                </ul>
+            </section>
 
-        <div class="skills-category">
-            <h3>Networking & Cloud</h3>
-            <ul>
-                <li><strong>Networking Fundamentals:</strong> TCP/IP, DNS, DHCP, HTTP/HTTPS, troubleshooting connectivity.</li>
-                <li><strong>Wireless Networks:</strong> Setup, configuration, and troubleshooting of Wi-Fi networks and access points.</li>
-                <li><strong>Cloud & Virtualization:</strong> Basic understanding of AWS (core services), VirtualBox, Docker (containerization concepts).</li>
-            </ul>
-        </div>
+            <section class="skills-category">
+                <h3>Networking & Cloud</h3>
+                <ul>
+                    <li><strong>Networking Fundamentals:</strong> TCP/IP, DNS, DHCP, HTTP/HTTPS, troubleshooting connectivity.</li>
+                    <li><strong>Wireless Networks:</strong> Setup, configuration, and troubleshooting of Wi-Fi networks and access points.</li>
+                    <li><strong>Cloud & Virtualization:</strong> Basic understanding of AWS (core services), VirtualBox, Docker (containerization concepts).</li>
+                </ul>
+            </section>
 
-        <div class="skills-category">
-            <h3>Hardware & Infrastructure</h3>
-            <ul>
-                <li><strong>Hardware Repair & Upgrades:</strong> RAM, HDD/SSD replacement, component identification.</li>
-                <li><strong>Cable Management:</strong> RJ45 cable termination, patch panel organization.</li>
-                <li><strong>IoT Devices:</strong> Setup, troubleshooting, and security considerations for smart home devices, solar panel converters, smart TVs, smart refrigerators, CCTV systems.</li>
-            </ul>
-        </div>
+            <section class="skills-category">
+                <h3>Hardware & Infrastructure</h3>
+                <ul>
+                    <li><strong>Hardware Repair & Upgrades:</strong> RAM, HDD/SSD replacement, component identification.</li>
+                    <li><strong>Cable Management:</strong> RJ45 cable termination, patch panel organization.</li>
+                    <li><strong>IoT Devices:</strong> Setup, troubleshooting, and security considerations for smart home devices, solar panel converters, smart TVs, smart refrigerators, CCTV systems.</li>
+                </ul>
+            </section>
 
-        <div class="skills-category">
-            <h3>IT Support & Troubleshooting</h3>
-            <ul>
-                <li><strong>Remote Support Tools:</strong> AnyDesk, TeamViewer (familiarity).</li>
-                <li><strong>Software Installation & Configuration:</strong> Enterprise applications (e.g., Moodle server), productivity suites.</li>
-                <li><strong>Printer Management:</strong> Installation, network configuration, and troubleshooting.</li>
-                <li><strong>Inventory Management:</strong> Tracking and cataloging IT assets.</li>
-                <li><strong>Audio-Visual Systems:</strong> Setup and support for conference room systems (stereo, Zoom setups).</li>
-            </ul>
-        </div>
-    </section>
+            <section class="skills-category">
+                <h3>IT Support & Troubleshooting</h3>
+                <ul>
+                    <li><strong>Remote Support Tools:</strong> AnyDesk, TeamViewer (familiarity).</li>
+                    <li><strong>Software Installation & Configuration:</strong> Enterprise applications (e.g., Moodle server), productivity suites.</li>
+                    <li><strong>Printer Management:</strong> Installation, network configuration, and troubleshooting.</li>
+                    <li><strong>Inventory Management:</strong> Tracking and cataloging IT assets.</li>
+                    <li><strong>Audio-Visual Systems:</strong> Setup and support for conference room systems (stereo, Zoom setups).</li>
+                </ul>
+            </section>
+        </section>
 
-    <section class="bg-1">
-        <h2>Complementary & Professional Skills</h2>
-        <p>Beyond core IT, my adaptable skillset includes diverse capabilities that enhance my overall value and problem-solving approach.</p>
+        <section class="bg-1">
+            <h2>Complementary & Professional Skills</h2>
+            <p>Beyond core IT, my adaptable skillset includes diverse capabilities that enhance my overall value and problem-solving approach.</p>
 
-        <div class="skills-category">
-            <h3>Design & Digital Marketing</h3>
-            <ul>
-                <li><strong>Figma:</strong> User Interface (UI) and User Experience (UX) design principles and tooling.</li>
-                <li><strong>Social Media Marketing:</strong> Basic understanding of strategy and platform utilization for engagement.</li>
-            </ul>
-        </div>
+            <section class="skills-category">
+                <h3>Design & Digital Marketing</h3>
+                <ul>
+                    <li><strong>Figma:</strong> User Interface (UI) and User Experience (UX) design principles and tooling.</li>
+                    <li><strong>Social Media Marketing:</strong> Basic understanding of strategy and platform utilization for engagement.</li>
+                </ul>
+            </section>
 
-        <div class="skills-category">
-            <h3>Soft Skills & Communication</h3>
-            <ul>
-                <li><strong>Analytical & Problem-Solving:</strong> Adept at diagnosing complex issues, breaking them down, and developing effective solutions.</li>
-                <li><strong>Exceptional English Communication:</strong> Demonstrated through TOEIC scores (Writing: C1, Speaking & Reading: B1, Listening: B2) and a year as an exchange student in the U.S. high school system, fostering fluency, adaptability, and cross-cultural communication.</li>
-                <li><strong>Adaptability & Continuous Learning:</strong> Eager to acquire new skills, thrive in fast-paced environments, and independently research solutions.</li>
-                <li><strong>Client & Customer Focus:</strong> Committed to providing exceptional, patient support and building positive relationships.</li>
-                <li><strong>Collaboration & Teamwork:</strong> Experienced in working with diverse teams (e.g., Parliament IT department, external vendors).</li>
-            </ul>
-        </div>
+            <section class="skills-category">
+                <h3>Soft Skills & Communication</h3>
+                <ul>
+                    <li><strong>Analytical & Problem-Solving:</strong> Adept at diagnosing complex issues, breaking them down, and developing effective solutions.</li>
+                    <li><strong>Exceptional English Communication:</strong> Demonstrated through TOEIC scores (Writing: C1, Speaking & Reading: B1, Listening: B2) and a year as an exchange student in the U.S. high school system, fostering fluency, adaptability, and cross-cultural communication.</li>
+                    <li><strong>Adaptability & Continuous Learning:</strong> Eager to acquire new skills, thrive in fast-paced environments, and independently research solutions.</li>
+                    <li><strong>Client & Customer Focus:</strong> Committed to providing exceptional, patient support and building positive relationships.</li>
+                    <li><strong>Collaboration & Teamwork:</strong> Experienced in working with diverse teams (e.g., Parliament IT department, external vendors).</li>
+                </ul>
+            </section>
 
-        <div class="skills-category">
-            <h3>Languages</h3>
-            <ul>
-                <li><strong>Thai:</strong> Native Proficiency</li>
-                <li><strong>English:</strong> Full Professional Proficiency (TOEIC scores listed above)</li>
-                <li><strong>Romanian:</strong> Beginner (Actively learning)</li>
-            </ul>
-        </div>
-    </section>
+            <section class="skills-category">
+                <h3>Languages</h3>
+                <ul>
+                    <li><strong>Thai:</strong> Native Proficiency</li>
+                    <li><strong>English:</strong> Full Professional Proficiency (TOEIC scores listed above)</li>
+                    <li><strong>Romanian:</strong> Beginner (Actively learning)</li>
+                </ul>
+            </section>
+        </section>
 
-    <section class="bg-2">
-        <p class="final-note">This list reflects my current capabilities and my commitment to continuous skill development in all areas of my professional interest.</p>
-    </section>
+        <section class="bg-2">
+            <p class="final-note">This list reflects my current capabilities and my commitment to continuous skill development in all areas of my professional interest.</p>
+        </section>
     </main>
 
     <!-- Footer Section -->
