--- a/cyberlab.html
+++ b/cyberlab.html
@@ -13,6 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="services.html">Services</a></li>
