--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!--Hero Section-->
         <section>
-            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
+            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
             <h1>Aspiring Cybersecurity Specialist | Results-Driven IT Professional</h1>
             <p class="subtitle">Bringing foundational cybersecurity expertise and a versatile IT skill set to immediate opportunities.</p>
             <p class="intro-text">With certifications including CompTIA Security+ and CC by ISC2, a year of practical IT Technician experience, and a relentless drive for problem-solving, I'm eager to contribute my dedication to your team. This site, operating under the Hexterika brand, showcases my journey and work. Learn more about Hexterika <a href="about.html">here</a>.</p>
