Change images size. Add more CSS files. Add some CSS on header (nav-bar) and footer on all pages.

--- a/certs.html
+++ b/certs.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Header Section -->
-    <header>
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -250,7 +250,7 @@
     </main>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer">
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
     </footer>
 </body>
