--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     
     <!-- Header Section -->
-    <header>
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -90,7 +90,7 @@
     </main>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer">
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
     </footer>
 </body>
