--- a/cyberlab.html
+++ b/cyberlab.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Header Section -->
-    <header>
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -218,7 +218,7 @@
     </main>
         
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer">
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
     </footer>
 
