--- a/my-journey.html
+++ b/my-journey.html
@@ -10,10 +10,11 @@
 <body>
 
     <!-- Header Section -->
-    <header>
+    <header class="header">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="services.html">Services</a></li>
@@ -92,7 +93,7 @@
     </main>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer">
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
     </footer>
 </body>
