Make change to the AWS IAM Security lab link on Hexterika Cyberlab because I changed the repo's name.

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -203,9 +203,9 @@
                 <li><a href="#">Lab: Windows Server & Basic Networking - Coming Soon</a></li>
             </ul>
         
-            <h3>☁️ Cloud Platforms</h3>
+            <h3>☁️ Cloud Platforms: AWS IAM Security Lab (ongoing)</h3>
             <ul>
-                <li><a href="https://github.com/sangsongthong-hexterika/AWS" target="_blank" rel="noopener noreferrer">Lab: AWS IAM Lab (ongoing)</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/AWS-IAM-Security" target="_blank" rel="noopener noreferrer">Lab: AWS IAM Security Lab</a></li>
             </ul>
         
             <h3>🐞 Bug Bounty & VDP Contributions</h3>
