Done with the new revamp of the landing page (index.html).

--- a/index.html
+++ b/index.html
@@ -29,58 +29,64 @@
 
         <!--Hero Section-->
         <section>
+            <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong" class="headshot"/>
-            <h1>Aspiring Cybersecurity Specialist | Results-Driven IT Professional</h1>
-            <p class="subtitle">Bringing foundational cybersecurity expertise and a versatile IT skill set to immediate opportunities.</p>
-            <p class="intro-text">With certifications including CompTIA Security+ and CC by ISC2, a year of practical IT Technician experience, and a relentless drive for problem-solving, I'm eager to contribute my dedication to your team. This site, operating under the Hexterika brand, showcases my journey and work. Learn more about Hexterika <a href="about.html">here</a>.</p>
+            <h2>Cybersecurity Specialist in Progress | Versatile IT Professional | Multi-Track Explorer</h2>
+            <p class="subtitle">Bringing foundational cybersecurity expertise and multi-track skills to immediate opportunities.</p>
+            <p class="intro-text">Hi, I'm Sangsongthong Chantarathai. Hexterika Breaks Free is not just my personal portfolio—it's also the front door to my freelancing services through Hexterika Cyberlab. This site showcases my cybersecurity work, versatile IT skills, and creative projects across tech, design, and sports. Whether you're here to explore, connect, or collaborate, you're in the right place.</p>
         </section>
 
         <!--Primary Focus-->
         <section>
-            <h2>My Primary Focus: Aspiring Cybersecurity Specialist</h2>
-            <p>My core passion lies in Cybersecurity, backed by CompTIA Security+ and CC by ISC2 certifications. I am actively honing my skills in vulnerability assessment and penetration testing through hands-on learning paths like TryHackMe, dedicated to mastering the art of digital defense.</p>
-            <a href="cyberlab.html" class="button-cta">Explore Hexterika Cyberlab</a>
+            <h2>🚀 Hexterika Cyberlab: My Primary Focus</h2>
+            <p>Step into my cybersecurity playground—where I build, break, and explore. Inside, you'll find hands-on labs, real-world projects, a mock pentest report, and my certifications, including the globally recognized CompTIA Security+.</p>
+            <!--Optional: Adding a tiny CompTIA logo on the side to visually enhance the section, but not now. Now, only the barebone version is needed.-->
+            <a href="cyberlab.html" class="button-cta">👉 Explore Hexterika CyberLab</a>
         </section>
 
-        <!--Immediate Contribution-->
-        <section>
-            <h2>Immediate Contributions & Versatile Skills</h2>
-            <p>Beyond my core cybersecurity focus, my adaptable skill set and year of practical experience as an IT Technician provide immediate value. I excel in roles requiring strong problem-solving, meticulous attention to detail, and exceptional client interaction.</p>
-            <p>I am immediately available for remote positions in:</p>
+        <!--Priority Clarification Section-->
+        <section class="priorities-section">
+            <h2>🌍 My Immediate Priorities</h2>
+            <p>I am immediately available for fully remote positions worldwide. I work comfortably across time zones and am ready to contribute from day one.</p>
+            <p><strong>My Relocation Priorities:</strong></p>
+            <ol>
+                <li><strong>Immediate Focus:</strong> Secure a remote position quickly.</li>
+                <li><strong>Primary Relocation Goal:</strong> Romania -- Deep personal motivation, currently learning Romanian, actively researching non-EU relocation pathways.</li>
+                <li><strong>Open to:</strong> North America (USA & Canada) -- Prior personal connections and strong market alignment.</li>
+                <li><strong>Interested In:</strong> UK and broader Europe -- To gain international IT and cybersecurity experience.</li>
+            </ol>
+            <p>I am familiar with core relocation processes and ready to take the necessary steps to relocate quickly. My passport is valid for more than six months, which meets standard international requirements and allows me to act without delays when opportunities arise.</p>
+            <p><strong>Language Proficiency:</strong> Thai (Native), English (TOEIC Certified -- Writing: C1, Listening: B2, Speaking: B1, Reading: B1). Currently learning French, Spanish, and Romanian to actively support international collaboration and relocation goals.</p>
+            <p><strong>Language Proficiency:</strong></p>
             <ul>
-                <li><strong>IT Support:</strong> Proficient in diagnosing and resolving diverse technical issues, ensuring operational efficiency.</li>
-                <li><strong>Technical Sales:</strong> Leveraging technical understanding to communicate solutions effectively.</li>
-                <li><strong>Customer Service & Call Center:</strong> Committed to providing exceptional service and building positive relationships with a technical edge.</li>
+                <li>🗣️ Thai: Native</li>
+                <li>🗣️ English: TOEIC Certified -- Writing: C1, Listening: B2, Speaking: B1, Reading: B1</li>
+                <li>🗣️ Currently Learning: Romanian, French, Spanish</li>
             </ul>
-        <p>Discover my full range of <a href="skills.html" class="text-link">technical and soft skills</a> that make me an asset to any team.</p>
+            <p>Actively expanding my language skills to support international collaboration, relocation goals, and meaningful personal connections.</p>
         </section>
 
-        <!--Key Transferable Skills-->
-        <section>
-            <h2>Key Strengths & Adaptability</h2>
-            <p>My diverse background and experiences have equipped me with a robust set of strengths crucial for dynamic environments:</p>
+        <section class="immediate-contribution-section">
+            <h2>🚀 Immediate Contributions: Roles I Can Fill Right Now</h2>
+            <p>While cybersecurity is my primary focus, I am fully ready and motivated to contribute immediately in a variety of roles where I can deliver results from day one. I bring practical skills, real-world learning, and hands-on problem-solving experience that make me adaptable and reliable across different environments. I am dedicated to bringing my best to any role I take on, while also continuing to develop my cybersecurity expertise for long-term growth.</p>
             <ul>
-                <li><strong>Analytical & Problem-Solving:</strong> Adept at quickly understanding new systems and methodologies to deliver effective solutions.</li>
-                <li><strong>Exceptional English Communication:</strong> Demonstrated through my TOEIC scores (Writing: C1, Speaking & Reading: B1, Listening: B2) and a year as an exchange student in the U.S. high school system, fostering fluency, adaptability, and cross-cultural communication.</li>
-                <li><strong>Adaptability & Continuous Learning:</strong> Eager to acquire new skills and thrive in fast-paced, evolving settings.</li>
-                <li><strong>Client & Customer Focus:</strong> Committed to providing exceptional service and building positive relationships.</li>
+                <li><strong>Software Development:</strong> Front-end web development using HTML, CSS, and practical project work—this website is my showcase.</li>
+                <li><strong>IT Support:</strong> Diagnosing and resolving technical issues efficiently.</li>
+                <li><strong>Technical Sales:</strong> Communicating technical solutions with clarity and confidence.</li>
+                <li><strong>Customer Service & Call Center:</strong> Providing excellent service with technical understanding.</li>
+                <li><strong>Social Media Marketing:</strong> Supporting content strategies, Facebook Ad Manager, SEO, A/B testing, and ROI tracking.</li>
+                <li><strong>Content Creator:</strong> Creating and editing visuals and videos for digital platforms.</li>
+                <li><strong>Video & Image Editor:</strong> Supporting visual content creation using Kdenlive, CapCut, GIMP, and Canva.</li>
+                <li><strong>MMA & Sport-Related Roles:</strong> Leveraging knowledge in sports science, coaching, and martial arts.</li>
+                <li><strong>Scuba Diving-Related Roles:</strong> Applying skills and certifications for diving-related opportunities.</li>
             </ul>
-        </section>
-
-        <!--Relocation To Romania-->
-        <section>
-            <h2>Location & Availability: Remote & Globally Flexible</h2>
-            <p>My <strong>#1 priority</strong> is securing an <strong class="key-statement">immediate remote position</strong> with a forward-thinking organization, <strong class="key-statement">regardless of geographic location</strong>. I am highly adaptable across various time zones and committed to contributing effectively from day one. My goal is to land a role <strong class="key-statement">within a month</strong> to support both my professional journey and personal goals, including a planned relocation to Romania by the end of this year.</p>
-            <p>To provide clear information, I've ranked my priorities. This approach avoids giving the impression that relocation must happen simultaneously with getting hired, which isn't my intention. Relocation can take time, but securing a fully remote role can be much faster.</p>
-            <ul>
-                <li><strong>#2 Primary Permanent Relocation Goal: Romania.</strong> My strong commitment to establishing my career permanently in Romania is fueled by profound personal motivation and genuine excitement for the local IT and cybersecurity landscape. I am proactively learning Romanian and diligently understanding the relocation process for non-EU citizens.</li>
-                <li><strong>#3 Permanent Relocation Interest: North America (USA & Canada).</strong> I'm very open to permanent relocation to these regions. My prior experience as an exchange student allowed me to build meaningful personal relationships (non-romantic) there, and I'm keen to build my career where the IT and cybersecurity job market aligns with my permanent goals.</li>
-                <li><strong>#4 Permanent Relocation Interest: United Kingdom & Broader Europe.</strong> I am also eager to explore permanent relocation opportunities in these regions to gain valuable international experience within the IT and cybersecurity fields.</li>
-            </ul>
+            <p>These roles are not just side skills—they are areas where I can confidently deliver results right now. For a deeper look into the specific tools, creative abilities, and additional skills I bring to these positions, you can explore my Complementary Skills page below.</p>
+            <a href="complementary-skills.html" class="button-cta">👉 See My Complementary Skills</a>
         </section>
 
         <!--Next Steps-->
-        <section>
+        <section class="next-steps-section">
+            <h2>👉 Let's Connect & Explore</h2>
             <ul>
                 <li><a href="about.html" class="button-cta">View Professional Profile</a></li>
                 <li><a href="contact.html" class="button-cta">Connect With Me</a></li>
@@ -91,6 +97,9 @@
     <!-- Footer Section -->
     <footer class="footer">
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
+        <p class="disclaimer">
+            <em>Disclaimer:</em> Hexterika is a personal brand created and owned by Sangsongthong Chantarathai. It is not a legally registered business at this time. "Gexter" is a personal alias and not a legal name. This website operates under personal branding for professional and freelance purposes.
+        </p>
     </footer>
 </body>
 </html>
